# tangent

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: .main.cpp.swp  main.cpp
mira/: CMakeLists.txt  todo
mira/include/: .functions.hpp.swp  .utils.hpp.swp  exceptions.hpp  functions.hpp  interpreter.hpp  language.hpp  number.hpp  parser.hpp  program_text.hpp  utils.hpp
mira/src/: .functions.cpp.swp  functions.cpp  language.cpp  parser.cpp
mira/tests/: adjacent_for_each_test.cpp  chained_test.cpp  filters_tests.cpp  function_call_with_parameters_test.cpp  function_definition_test.cpp  function_doesnt_exist_test.cpp  functions_visible_inside_body_test.cpp  optionally_find_if_test.cpp  redefining_existing_function_test.cpp  shadowing_test.cpp  string_replace_test.cpp
sdl_plus_plus/: CMakeLists.txt
sdl_plus_plus/example/: main.cpp
sdl_plus_plus/find_modules/: FindSDL2_image.cmake
sdl_plus_plus/include/sdl-plus-plus/: drawing.h  flow.h  resource.h
sdl_plus_plus/src/: drawing.cpp  flow.cpp  resource.cpp
